--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">WifiDirectChat</string>
+    <string name="app_name">P2PChat</string>
     <string name="Open"> NavBar</string>
     <string name="Close"> NavBar</string>
     <string name="historyButtonTitle">History</string>
     <string name="chatButtonTitle">Chat</string>
-    <string name="cancelButtonTitle">Terminate the search</string>
+    <string name="cancelButtonTitle">Stop Searching</string>
     <string name="clearHistoryButtonTitle">Clear history</string>
     <string name="emptyHistoryMessage">No history found</string>
-    <string name="loading_connection">Loading connection...</string>
+    <string name="loading_connection">Searching active users……</string>
     <string name="title_activity_chat">Chat activity</string>
     <string name="historyPageTitle">History</string>
     <string name="enter_message">Enter the text</string>
