colorpicker, voiceToText, TextFile transfer Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="start_date">Start Date</string>
     <string name="_0">0</string>
     <string name="delete">Delete</string>
+    <string name="set_background">Set Background</string>
 </resources>
